Project instagram_db {
  database_type: "PostgreSQL"
}

Enum reaction_type {
  like
  love
  care
  funny
  sad
}

Enum user_status {
  active
  inactive
  deleted
}

Enum follow_request_status {
  pending
  accepted
  rejected
}

Table users {
  id integer [pk, increment]
  username varchar(30) [not null, unique]
  bio varchar(400)
  avatar_url varchar
  phone_number varchar(25)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  status user_status [not null, default: "active"]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table followers {
  leader_id integer [not null, ref: > users.id]
  follower_id integer [not null, ref: > users.id]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (follower_id) [name: "user_follows_follower_id_idx"]
    (leader_id) [name: "user_follows_user_id_idx"]
    (follower_id, leader_id) [pk]
  }

  Note: "check: follower_id != leader_id"
}

Table posts {
  id integer [pk, increment]
  contents varchar [not null]
  url varchar [not null]
  caption varchar(240)
  location geometry(Point,4326)
  user_id integer [ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Indexes {
    (location) [name: "posts_location_gist", type: gist]
  }

  Note: "check: ST_SRID(location)=4326 and lon/lat bounds"
}

Table hashtags {
  id integer [pk, increment]
  title varchar(50) [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table hashtag_posts {
  post_id integer [not null, ref: > posts.id]
  hashtag_id integer [not null, ref: > hashtags.id]

  Indexes {
    (post_id) [name: "hashtag_posts_post_id_idx"]
    (hashtag_id) [name: "hashtag_posts_hashtag_id_idx"]
    (post_id, hashtag_id) [pk]
  }
}

Table photo_tags {
  user_id integer [not null, ref: > users.id]
  post_id integer [not null, ref: > posts.id]
  x double  [not null]
  y double [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Indexes {
    (post_id) [name: "photo_tags_post_id_idx"]
    (user_id) [name: "photo_tags_user_id_idx"]
    (post_id, user_id) [pk]
  }

  Note: "check: tag_x between 0 and 1 and tag_y between 0 and 1"
}

Table caption_tags {
  user_id integer [not null, ref: > users.id]
  post_id integer [not null, ref: > posts.id]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (post_id) [name: "caption_tags_post_id_idx"]
    (user_id) [name: "caption_tags_user_id_idx"]
    (post_id, user_id) [pk]
  }
}

Table comments {
  id integer [pk, increment]
  contents varchar(240) [not null]
  post_id integer [ref: > posts.id]
  user_id integer [ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table post_reactions {
  type reaction_type [not null, default: "like"]
  post_id integer [ref: > posts.id]
  user_id integer [ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Indexes {
    (post_id, user_id) [pk]
  }
}

Table comment_reactions {
  type reaction_type [not null, default: "like"]
  comment_id integer [ref: > comments.id]
  user_id integer [ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Indexes {
    (comment_id, user_id) [pk]
  }
}